--- a/themes/amp/layouts/partials/tag.html
+++ b/themes/amp/layouts/partials/tag.html
@@ -12,6 +12,7 @@
 
 {{else}} 
 
+{{if eq .Title "Renewable Energy SCD Clinic" }}{{ partial "subcat/shelter.html"}}{{end}}
 {{if eq .Title "Shelter" }}{{ partial "subcat/shelter.html"}}{{end}}
 {{if eq .Title "Brick" }}{{ partial "subcat/brick.html"}}{{end}}
 {{if eq .Title "Wastewater Collection" }}{{ partial "subcat/wastewater-collection.html"}}{{end}}
