--- a/themes/amp/layouts/partials/header.html
+++ b/themes/amp/layouts/partials/header.html
@@ -102,6 +102,8 @@
                 <li class="ampstart-nav-item{{if $currentPage.IsMenuCurrent "main" . }} www-current-page{{end}}"><a href="{{.URL}}" class="text-decoration-none block">{{ .Name }}</a></li>
               {{end}}
             {{end}}
+            <li><a href="/creative/search"><img src="/search.svg" width=26 height=26 style="position:relative;top:8px;" border=0></a>
+            </li>
             </ul>
         </nav>
     </header>
