--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -15,7 +15,7 @@
 <div class="col-sm-1 col-md-1"></div>
 </div>
 <div class="row">
-<div class="col-md-6"><h2>Plastic Burn Abatement</h2><p></p></div><div class="col-md-6"><h2>Self Help Groups</h2><p>The ability to work together toward common goals in community is at the core of the table banking movement. Planning a good system with two groups in mind, talking to Kigali community leader.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-6"><h2>Plastic Burn Abatement</h2><p></p></div><div class="col-md-6"><p>The ability to work together toward common goals in community is at the core of the table banking movement. Planning a good system with two groups in mind, talking to Kigali community leader.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 </div>
 <div class="col-sm-1"></div>
 <div class="row" style="margin:25px;">
@@ -24,7 +24,9 @@
 <div class="col-sm-1 col-md-1"></div>
 </div>
 <div class="row">
-<div class="col-md-6"><h2>Innovation Elevation</h2><p></p></div><div class="col-md-6"><h4>Short film comedic -docu -drama series</h4><p> SCD Hub research fuses the creative, scientific, and interpersonal dynamics that effect personal outcomes relating to a current sewage pipe repair project in urban Kenya and potentially effected drinking water taps running through hoses.  Colorado water contamination stories are shared and discussed alongside contemprary African water issues in a candid manner, solutions to common problems and case histories are explored and researched as part of the program, demonstrating a culture of inquiry and research.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-6"><h2>Innovation Elevation</h2><p></p></div><div class="col-md-6"><h4>Short film comedic docu-drama series</h4>
+
+<p>Innovation Elevation is a creative video collaboration between Dirona Hills video production team and SCD Hub.  Investigating personal outcomes relating to a current sewage pipe repair project in urban Kenya and potentially effected drinking water taps running through hoses.</p><p><a class="btn btn-raised" href="/creative/innovation-elevation-video-series/" role="button">View details »</a></p></div>
 </div>
 </div>
 
@@ -352,4 +354,3 @@ s.src="https://salesiq.zoho.com/widget";t=d.getElementsByTagName("script")[0];t.
     </amp-selector>
 
 {{ partial "basefoot.html" . }}
-
