--- a/themes/amp/layouts/portal.html
+++ b/themes/amp/layouts/portal.html
@@ -1107,21 +1107,113 @@ networkSeries.data = [
       </div>
 
       
-  
+    
+      </div>
+    </div>
+    
+    <div class="card-grid__section">
+      <div class="card card--bamboo">
+        <div class="card__overlay">
+          <div>
+            <h5 class="card__overlay-heading">
+              Partner project- Mamawatoto Self Help Group 
+            </h5>
+          </div>
+        </div>
 
-  
+        <div class="card__beneath">
+          <div>
+            <h5 class="card__heading">
+              African leaders creating new green jobs. 
+            </h5>
+
+            <p class="card__text">
+              Shoe restoration, upcycled handbags, medicinals, flower & tree farm nurseries. 
+
+              <form action="https://www.paypal.com/donate" method="post" target="_top">
+                <input type="hidden" name="business" value="CNUT8D7G7QEXA" />
+                <input type="hidden" name="item_name" value="Mamawatoto Self Help Group" />
+                <input type="hidden" name="currency_code" value="USD" />
+                <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_SM.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+                <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+                </form>
+                
+            </p>
+          </div>
+        </div>
+      </div>
+      
+      <div class="card card--chill">
+        <div class="card__overlay">
+          <div>
+            <h5 class="card__overlay-heading">
+              SCD Hub wishes to thank UNM Peace Engineering
+              <img width=220 src="/images/attribution/logo_peacewater_solutions_database_may9_2021.png">
+            </h5>
+          </div>
+        </div>
+
+        <div class="card__beneath">
+          <div>
+            <h5 class="card__heading">
+              <img width=220 src="/images/buttons/drinking_water.gif">
+              <img width=220 src="/images/buttons/wastewater.gif">
+              <img width=220 src="/images/buttons/solid_waste.gif">
+            </h5>
+
+            <p class="card__text"></p>
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+    
+    <div class="card-grid__section card-grid__section--large">
+      <div class="card card--vanilla">
+        <div class="card__overlay">
+          <div>
+            <h5 class="card__overlay-heading">
+              Building materials research
+            </h5>
+              {{ partial "fontawesome.html" "building" }}
+          </div>
+        </div>
+
+        <div class="card__beneath">
+          <div>
+            <h5 class="card__heading">
+              Summer 2021 - Drexel U Support
+            </h5>
+              {{ partial "fontawesome.html" "bolt" }}
+            <p class="card__text">
+               Enoch and Khalil for pumps, building materials, and reference citations.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 
   <span class="row">
     <div class="col-auto"></div>
-<div><img width=210 src="/images/buttons/drinking_water.gif">
-<img width=210 src="/images/buttons/solid_waste.gif"><BR>
-<img width=210 src="/images/buttons/wastewater.gif"><BR>
-<img width=210 src="/images/buttons/shelter__.gif"><BR>
-<img width=210 src="/images/buttons/telecom.png"></div>
+    <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/drinking_water.gif"></div>
+  </span>
+  <span class="row">
+    <div class="col-auto"></div>
+    <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/solid_waste.gif"></div>
+    <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/wastewater.gif"></div>
     <div class="col-auto"></div>
   </span>
+  <span class="row">
+    <div class="col-auto"></div>
+    <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/shelter__.gif"></div>
+    <div class="col-auto"></div>
+  </span>
+  <span class="row">
+    <div class="col-auto"></div>
+    <div class="mb2 px2 col-2 sm-col-2 mx-auto www-component-anchor"><img width=210 src="/images/buttons/telecom.png"></div>
+    <div class="col-auto"></div>
   </span>
 
 
