update homepage partipartially

--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -76,386 +76,280 @@ nodeTemplate.events.on("out", function (event) {
 
 networkSeries.data = [  
    {  
-      "name":"Phoebe",
+      "name":"Water Management",
       "value":102,
       "linkWith":[  
-         "Gunther"
+         "Energy",
+         "Interfaces"
       ],
       "children":[  
          {  
-            "name":"David",
+            "name":"Purification",
             "value":14
          },
          {  
-            "name":"Roger",
+            "name":"Reclaimation",
             "value":1
          },
          {  
-            "name":"Duncan",
+            "name":"Distribution",
             "value":1
          },
          {  
-            "name":"Rob Dohnen",
+            "name":"Database",
             "value":2
-         },
-         {  
-            "name":"Ryan",
-            "value":5
-         },
-         {  
-            "name":"Malcom",
-            "value":1
-         },
-         {  
-            "name":"Robert",
-            "value":1
-         },
-         {  
-            "name":"Sergei",
-            "value":1
-         },
-         {  
-            "name":"Vince",
-            "value":2
-         },
-         {  
-            "name":"Jason",
-            "value":1
-         },
-         {  
-            "name":"Rick",
-            "value":2
-         },
-         {  
-            "name":"Gary",
-            "value":7
-         },
-         {  
-            "name":"Jake",
-            "value":2
-         },
-         {  
-            "name":"Eric",
-            "value":3
-         },
-         {  
-            "name":"Mike",
-            "value":18
          }
       ]
    },
    {  
-      "name":"Monica",
+      "name":"Power System Hardware",
       "value":204,
       "linkWith":[  
-         "Rachel",
-         "Chandler",
-         "Ross",
-         "Joey",
-         "Phoebe"
+         "Interfaces",
+         "Data"
       ],
       "children":[  
          {  
-            "name":"Paul the wine guy",
+            "name":"Interfaces",
             "value":1
          },
          {  
-            "name":"Mr Geller",
+            "name":"Water",
             "value":8
          },
          {  
-            "name":"Mrs Geller",
+            "name":"Solar Panels",
             "value":14
          },
          {  
-            "name":"Aunt Lilian",
+            "name":"Windmills",
             "value":2
          },
          {  
-            "name":"Nana",
+            "name":"Battery Bank",
             "value":1
          },
          {  
-            "name":"Young Ethan",
+            "name":"Generator",
             "value":5
          },
          {  
-            "name":"Ben",
+            "name":"External Power",
             "value":9
          },
          {  
-            "name":"Fun Bobby",
+            "name":"Generator",
             "value":3
          },
          {  
-            "name":"Richard",
+            "name":"Fuel Cell",
             "value":16
          },
          {  
-            "name":"Mrs Green",
+            "name":"User Support (Maintenance & Manuals)",
             "value":4
          },
          {  
-            "name":"Paolo2",
-            "value":1
-         },
-         {  
-            "name":"Pete",
+            "name":"Hardware",
             "value":10
          },
          {  
-            "name":"Chip",
+            "name":"System Health",
             "value":1
-         },
-         {  
-            "name":"Timothy (Burke)",
-            "value":1
-         },
-         {  
-            "name":"Emily",
-            "value":17
-         },
-         {  
-            "name":"Dr. Roger",
-            "value":3
          }
       ]
    },
    {  
-      "name":"Ross",
+      "name":"Data",
       "value":216,
       "linkWith":[  
-         "Joey",
-         "Phoebe",
-         "Mrs Geller",
-         "Aunt Lilian",
-         "Mrs Bing",
-         "Ben",
-         "Mrs Green",
-         "Emily"
+         "Comm",
+         "Energy"
       ],
       "children":[  
          {  
-            "name":"Carol",
+            "name":"Data for Homer",
             "value":10
          },
          {  
-            "name":"Celia",
+            "name":"Availability",
             "value":2
          },
          {  
-            "name":"Julie",
+            "name":"Scale",
             "value":6
          },
          {  
-            "name":"Chloe",
+            "name":"Inventory",
             "value":1
          },
          {  
-            "name":"Bonnie",
+            "name":"Community Needs",
             "value":4
          },
          {  
-            "name":"Messy Girl (Cheryl)",
+            "name":"Situation",
             "value":5
          },
          {  
-            "name":"Jill",
+            "name":"Resources for Ops Center",
             "value":1
          },
          {  
-            "name":"Elizabeth",
+            "name":"Resources for System Construction",
             "value":8
          },
          {  
-            "name":"Aunt Millie",
+            "name":"Checklists",
             "value":2
          },
          {  
-            "name":"Mona",
+            "name":"Analysis",
             "value":11
-         },
-         {  
-            "name":"Emma",
-            "value":7
-         },
-         {  
-            "name":"Charlie",
-            "value":13
          }
       ]
    },
    {  
-      "name":"Chandler",
+      "name":"Comm",
       "value":167,
       "linkWith":[  
-         "Joey",
-         "Phoebe"
+         "Data",
+         "Security"
       ],
       "children":[  
          {  
-            "name":"Aurora",
+            "name":"Internet",
             "value":2
          },
          {  
-            "name":"Jill Goodacre",
+            "name":"Hot Spots",
             "value":1
          },
          {  
-            "name":"Janice",
+            "name":"EM Broadcast (AM/FM)",
             "value":12
          },
          {  
-            "name":"Mrs Bing",
+            "name":"Satelite Phone",
             "value":6
          },
          {  
-            "name":"Nina",
+            "name":"Medical Comms",
             "value":1
          },
          {  
-            "name":"Susie",
+            "name":"Management Comms",
             "value":5
-         },
-         {  
-            "name":"Mary Theresa",
-            "value":1
-         },
-         {  
-            "name":"Ginger",
-            "value":2
-         },
-         {  
-            "name":"Joanna",
-            "value":5
-         },
-         {  
-            "name":"Kathy",
-            "value":9
-         },
-         {  
-            "name":"Mr Bing",
-            "value":1
          }
       ]
    },
    {  
-      "name":"Rachel",
+      "name":"Security",
       "value":158,
       "linkWith":[  
-         "Chandler",
-         "Ross",
-         "Joey",
-         "Phoebe",
-         "Mr Geller",
-         "Mrs Geller"
+         "Comm",
+         "Data"
       ],
       "children":[  
          {  
-            "name":"Paolo",
+            "name":"Facial Racognition",
             "value":5
          },
          {  
-            "name":"Barry",
+            "name":"Manage Access (safely)",
             "value":1
          },
          {  
-            "name":"Dr Green",
+            "name":"Cyber & Physical Security & Safety",
             "value":3
-         },
-         {  
-            "name":"Mark3",
-            "value":1
-         },
-         {  
-            "name":"Josh",
-            "value":2
-         },
-         {  
-            "name":"Gunther",
-            "value":2
-         },
-         {  
-            "name":"Joshua",
-            "value":3
-         },
-         {  
-            "name":"Danny",
-            "value":1
-         },
-         {  
-            "name":"Mr. Zelner",
-            "value":1
-         },
-         {  
-            "name":"Paul Stevens",
-            "value":3
-         },
-         {  
-            "name":"Tag",
-            "value":4
-         },
-         {  
-            "name":"Melissa",
-            "value":1
-         },
-         {  
-            "name":"Gavin",
-            "value":2
          }
       ]
    },
    {  
-      "name":"Joey",
-      "value":88,
+      "name":"Control System",
+      "value":78,
       "linkWith":[  
-         "Phoebe",
-         "Janice",
-         "Mrs Green",
-         "Kathy",
-         "Emily",
-         "Charlie"
+         "Consumers",
+         "Security"
       ],
       "children":[  
          {  
-            "name":"Lorraine",
+            "name":"Homer",
             "value":2
          },
          {  
-            "name":"Melanie",
+            "name":"User Support",
             "value":2
          },
          {  
-            "name":"Erica",
+            "name":"Water Management",
             "value":2
          },
          {  
-            "name":"Kate",
+            "name":"Manage Power Systems",
             "value":4
          },
          {  
-            "name":"Lauren",
+            "name":"Switching Power Systems",
             "value":2
          },
          {  
-            "name":"Estelle",
+            "name":"Consumer Monitoring",
             "value":1
          },
          {  
-            "name":"Katie",
+            "name":"Managing Distribution",
             "value":2
          },
          {  
-            "name":"Janine",
+            "name":"Collapse OS: flexibility for old tech",
             "value":9
          },
          {  
-            "name":"Erin",
+            "name":"Expandible (scalability)",
             "value":1
+         }
+      ]
+   },
+   { 
+      "name":"Consumers",
+      "value":158,
+      "linkWith":[ 
+         "Economics & Fundraising",
+         "Control System"
+      ],
+      "children":[ 
+         { 
+            "name":"Interface to Local Systems",
+            "value":5
          },
-         {  
-            "name":"Cecilia",
-            "value":3
+         { 
+            "name":"Distribution Network",
+            "value":5
+         },
+         { 
+            "name":"Lighting",
+            "value":5
+         },
+         { 
+            "name":"American University of Dubai",
+            "value":5
+         },
+         { 
+            "name":"Computers",
+            "value":5
+         },
+         { 
+            "name":"Desalinization",
+            "value":5
+         },
+         { 
+            "name":"Classrooms",
+            "value":5
+         },
+         { 
+            "name":"Medical",
+            "value":10
          }
       ]
    }
@@ -915,11 +809,11 @@ networkSeries.data = [
 <div class="col-sm-1"></div>
 <div class="row" style="margin:25px;">
 <div class="col-sm-1 col-md-1"></div>
-<div class="col-md-5 col-sm-4"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://allnations.cafe">All Nations Cafe</a>'s model for informal education and mentoring process and peacemaking model</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-5 col-sm-4"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://www.ancdenver.com">All Nations Center</a>. A model for informal education and community peacemaking model, <a href="">Mango House Aurora Colorado</a>.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 <div class="col-sm-1 col-md-1"></div>
 </div>
 <div class="row">
-<div class="col-md-6 col-sm-4"><h2>Plastic Burn Abatement</h2><p></p></div><div class="col-md-6"><p>The ability to work together toward common goals in community is at the core of the table banking movement. Planning a good system with two groups in mind, talking to Kigali community leader.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-6 col-sm-4"><h2>Machakos Plastic Burn Abatement, Upcycling & Health Awareness Effort</h2><p></p></div><div class="col-md-6"><p>Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 </div>
 <div class="col-sm-1"></div>
 <div class="row" style="margin:25px;">
@@ -928,9 +822,9 @@ networkSeries.data = [
 <div class="col-sm-1 col-md-1"></div>
 </div>
 <div class="row">
-<div class="col-md-6"><h2>Innovation Elevation</h2><p></p></div><div class="col-md-6"><h4>Short film comedic docu-drama series</h4>
+<div class="col-md-6"><h2>Innovation Elevation</h2><p></p></div><div class="col-md-6"><h4>Comedic docu-drama experiment</h4>
 
-<p>Innovation Elevation is a creative video collaboration between Dirona Hills video production team and SCD Hub.  Investigating personal outcomes relating to a current sewage pipe repair project in urban Njiru, Kenya and how drinking water taps and wells running nearby are effected.</p><p><a class="btn btn-raised" href="/creative/innovation-elevation-video-series/" role="button">View details »</a></p></div>
+<p>Innovation Elevation is a creative video collaboration between Dirona Hills video production team, Kenyan 3d animator Bonface Muriithi Mbaabu and SCD Hub.  Investigating personal outcomes relating to a current sewage pipe repair project in urban Njiru, Kenya and how drinking water taps and wells running nearby are effected.</p><p><a class="btn btn-raised" href="/creative/innovation-elevation-video-series/" role="button">View details »</a></p></div>
 </div>
 </div>
 
@@ -957,9 +851,8 @@ networkSeries.data = [
              }
              </style>
 
-             <a href='#/' id='trig1'>HOVER</a>
-             <iframe id='ifrm1' name='ifrm1' src='https://days.to/until/christmas'></iframe> 
-            </h5>
+             <a href='#/' id='trig1'>Share</a>
+             <img src="http://localhost:1313/images/logo.svg"> 
               {{ partial "fontawesome.html" "diamond" }}
           </div>
         </div>
@@ -986,7 +879,7 @@ networkSeries.data = [
             </h5>
 
             <p class="card__text">
-              "SCD Clinics" Our method is to support more community involvement with strutured support and research partnerships.
+              "SCD Clinics" support community know-how bridgebuilding partnerships.
             </p>
           </div>
         </div>
