--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -368,8 +368,8 @@ networkSeries.data = [
 <div class="col-sm-1 col-md-1"></div>
 </div>
 <div class="row">
-<div class="col-md-6 col-sm-4"><h2>Plastic Burn Abatement</h2><p></p></div><div class="col-md-6"><p>The ability to work together toward common goals in community is at the core of the table banking movement. Planning a good system with two groups in mind, talking to Kigali community leader.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
-</div>
+<div class="col-md-6 col-sm-4"><h2>Machakos Plastic Burn Abatement, Upcycling & Health Awareness Effort</h2><p></p></div><div class="col-md-6"><p>Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+</div>    
 <div class="col-sm-1"></div>
 <div class="row" style="margin:25px;">
 <div class="col-sm-1 col-md-1"></div>
@@ -378,7 +378,6 @@ networkSeries.data = [
 </div>
 <div class="row">
 <div class="col-md-6"><h2>Innovation Elevation</h2><p></p></div><div class="col-md-6"><h4>Short film comedic docu-drama series</h4>
-
 <p>Innovation Elevation is a creative video collaboration between Dirona Hills video production team and SCD Hub.  Investigating personal outcomes relating to a current sewage pipe repair project in urban Njiru, Kenya and how drinking water taps and wells running nearby are effected.</p><p><a class="btn btn-raised" href="/creative/innovation-elevation-video-series/" role="button">View details »</a></p></div>
 </div>
 </div>
