--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -368,7 +368,7 @@ networkSeries.nodes.template.events.on("out", function(event) {
     
 <div class="col-md-6 stories" style="height:250px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://www.ancdenver.com">All Nations Center</a>. A model for informal education and community peacemaking model, <a href="">Mango House Aurora Colorado</a>.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
-<div class="col-md-6 stories" style="height:250px;"><h2>Machakos Plastic Burn Abatement, Upcycling & Health Awareness Effort</h2><p></p></div><div class="col-md-6"><p>Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-6 stories" style="height:250px;"><h2>Machakos Plastic Burn Abatement, Upcycling & Health Awareness Effort</h2><p>Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
      
 <div class="col-md-6 stories" style="height:250px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://allnations.cafe">All Nations Cafe</a>'s model for informal education and mentoring process and peacemaking model</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
