--- a/themes/amp/layouts/index.html
+++ b/themes/amp/layouts/index.html
@@ -362,30 +362,33 @@ networkSeries.nodes.template.events.on("out", function(event) {
 </header>
 <body>
 <div class="container" style="position:relative;top:-195px;" >
+
 <div class="row" style="margin:25px;">
-<div class="col-sm-1 col-md-1"></div>
-
     
-<div class="col-md-6 stories" style="height:250px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://www.ancdenver.com">All Nations Center</a>. A model for informal education and community peacemaking model, <a href="">Mango House Aurora Colorado</a>.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-2 stories" style="height:350px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://www.ancdenver.com">All Nations Center</a>. A model for informal education and community peacemaking model, <a href="">Mango House Aurora Colorado</a>.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
-<div class="col-md-6 stories" style="height:250px;"><h2>Machakos Plastic Burn Abatement, Upcycling & Health Awareness Effort</h2><p>Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-2 stories" style="height:250px;"><h2>Plastic Upcycling</h2><p>'Safer than burning' means waste is diverted and  beautiful products produced.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
      
-<div class="col-md-6 stories" style="height:250px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://allnations.cafe">All Nations Cafe</a>'s model for informal education and mentoring process and peacemaking model</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-2 stories" style="height:250px;"><h2>Peace Engineering</h2><p>SCD Hub supports <a href="https://allnations.cafe">All Nations Cafe</a>'s model for informal education and mentoring process and peacemaking model</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
-<div class="col-md-6 stories"><h2>PENG Collaboration</h2><p></p><h4>Peace Engineering Student Collaboration</h4><p>SCD Hub maintains a public domain sustainable solutions database which can be downloaded or used as a web api. </p><p><a class="btn btn-raised" href="https://scdhub.org/index.json" role="button">USE THIS LINK</a> to explore the data in json format.  We are happy to have had the help of Drexel, Purdue, and UNM students in the 2020-21 scholastic season, and look forward to a new year of collaboration with Sudan Technical University, UNM, Drexel, Purdue, and maybe you! contact ecocommunity@protonamil.com to discuss.</p></div>
+</div>
+<div class="row" style="margin:25px;">
+
+<div class="col-md-3 col-sm-3 stories"><h2>PENG Collaboration</h2><p></p><h4>Peace Engineering Student Collaboration</h4><p>SCD Hub maintains a public domain sustainable solutions database which can be downloaded or used as a web api. </p><p><a class="btn btn-raised" href="https://scdhub.org/index.json" role="button">USE THIS LINK</a> to explore the data in json format.  We are happy to have had the help of Drexel, Purdue, and UNM students in the 2020-21 scholastic season, and look forward to a new year of collaboration with Sudan Technical University, UNM, Drexel, Purdue, and maybe you! contact ecocommunity@protonamil.com to discuss.</p></div>
         
-<div class="col-md-6 stories"><h2>SCD Hub forum</h2><p></p><h4>Please refer to our discussion forum to share ideas or source reviews that you feel are useful</h4><p>Our forum is now active. the url will change to mylunch.link  </p><p>The beta forum and chat can be accessed here.<a class="btn btn-raised" href="http://mylunch.link:4567" role="button">here</a></p></div>
+<div class="col-md-3 col-sm-3 stories"><h2>SCD Hub forum</h2><p></p><h4>Please refer to our discussion forum to share ideas or source reviews that you feel are useful</h4><p>Our forum is now active. the url will change to mylunch.link  </p><p>The beta forum and chat can be accessed here.<a class="btn btn-raised" href="http://mylunch.link:4567" role="button">here</a></p></div>
  
-<div class="col-md-6 col-sm-4 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280><BR>Machakos Kenya community group focused on local job creation, <a href="https://mamawatoto.link">Mamawatoto Eco School</a>. Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-3 col-sm-3 stories" style="width:320px; margin: 10 px;"><h2>Plastic Burn Abatement & Jobs</h2><p><img src="/images/mamawatoto-group-machakos-2021_b.jpg" with=280><BR>Machakos Kenya community group focused on local job creation, <a href="https://mamawatoto.link">Mamawatoto Eco School</a>. Environmental and human health need not be compromised. 'Safer than burning' waste planning via mapping and education.</p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
 
-<div class="col-md-5 col-sm-4 stories"><h2>Biogas projects</h2><p>Small to mid-sized biogas projects designed to satisfy local sanitation and energy requirements.  Hub and spoke model allows for processing  locations for biosolids, commposting on-site is another option. Biodigester membrane shipped via alibaba $75, or made from truck tubes repurposed into long flexible methane producing membrane biodigesters. </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
+<div class="col-md-3 col-sm-3 stories"><h2>Biogas projects</h2><p>Small to mid-sized biogas projects designed to satisfy local sanitation and energy requirements.  Hub and spoke model allows for processing  locations for biosolids, commposting on-site is another option. Biodigester membrane shipped via alibaba $75, or made from truck tubes repurposed into long flexible methane producing membrane biodigesters. </p><p><a class="btn btn-raised" href="#" role="button">View details »</a></p></div>
    
 </div>
 
-<div class="container" style="position:relative;top:-225px;">
+<div class="row container" style="position:relative;top:-225px;">
 
 
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' rel='stylesheet' type='text/css'>
+
 
 
   <div class="card-grid">
